app/assets/stylesheets/pages/_home.scss
// Specific CSS for your home-page
html {
  scroll-behavior: smooth;
}

.purple-background {
  width: 100%;
  height: 100%;
  background-color: $purple;
  z-index:0;
}

.page-content.home-page {
  z-index: 1;
  background-size: cover;
  background-color: $purple;
  background-repeat: no-repeat;
  background-position: top;
  height: 100vh;
  color: white;


  .top-nav {
    position: relative;
    padding: 20px;
    text-align: center;

    .company-name {
      letter-spacing: 0.25em;
    }

    a {
      position: absolute;
      top: 20px;
      right: 20px;
      color: white;
      &:hover {
        text-decoration: none;
        opacity: 0.8;
      }
    }
  }


  .tagline-container {
    padding-top: 45vh;
    padding-left: 30px;
    padding-right: 30px;

    .tagline-first {
      font-family: "Roboto";
      font-weight: 300;
      font-size: 20px;
    }

    .tagline-second {
      // font-family: "Roboto";
      // font-weight: bold;
      // font-size: 48px;
      float: right;
      padding-right: 30px;
    }
  }

  .call-to-action-flex {
    // margin-top: 80px;
    // display: flex;
    // justify-content: space-around;
  }

  .call-to-action {
    margin-top: 60px;
    text-align: center;
  }

  .learn-more {
    margin-top: 30px;
    text-align: center;
  }

  .learn-more-link {
    color: $white;

  }
}

.how-it-works-container {
  margin-top: -120px;
  text-align: center;
  padding: 60px 20px 10px 20px;
}

.HIW-step-container {
  margin-bottom: 5px;
  position: relative;
  width: 100%;
  height: 200px;
  &:first-child {
    margin-bottom: -30px;
  }
}

.message-text-HIW {
  position: absolute;
  color: white;
  padding: 9px 3px 1px 3px;
  font-size: 17px;
  margin-left: auto;
  width: 100%;
  margin-top: 105px;
  z-index: 3;

  h2 {
  margin-bottom: 15px;
  }
}

.background-number-one {
  z-index: 2;
  position: absolute;
  left: 28%;
  color: $light-purple;
  padding-top: 0px;

  p {
  font-family: 'Raleway', sans-serif !important;
  font-size: 145px;
  margin-left: 55%;
  opacity: .6;
  }
}

.background-numbers {
  z-index: 2;
  position: absolute;
  left: 28%;
  color: $light-purple;
  padding-top: 0px;

  p {
  font-family: 'Raleway', sans-serif !important;
  font-size: 145px;
  margin-left: 40%;
  opacity: .6;
  }
}

.call-to-action-HIW {
    margin: 90px auto 30px auto;
    display: flex;
    justify-content: space-around;
  }

